Implement adding passwords

--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
             <header>
                 <a href='#'><span class='icon icon-back' id='close-manual-password-input'>close</span></a>
                 <menu type='toolbar'>
-                    <button class='icon icon-edit'>save</button>
+                    <button class='icon icon-edit' id='save-password-input'>save</button>
                 </menu>
                 <h1>Add Password</h1>
             </header>
             <fieldset>
                 <section>
                     <h2>Website</h2>
-                    <input type='text' required>
+                    <input type='text' required id='password-website-input'>
                 </section>
                 <section>
                     <h2>Username</h2>
-                    <input type='text' required>
+                    <input type='text' required id='password-username-input'>
                 </section>
                 <section>
                     <h2>Password</h2>
-                    <input type='password'>
+                    <input type='password' id='password-password-input'>
                 </section>
             </fieldset>
         </section>
