--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <menu type='toolbar'>
                     <a href='#'><span class='icon icon-add' id='add-identity'>new</span></a>
                 </menu>
-                <h1>Foxy Authenticate</h1>
+                <h1>Carbon Fox</h1>
             </header>
 
             <section data-type='list'>
