Move password edit dialog into its own page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div ng-view></div>
+    <div id="view" ng-view></div>
     <div id="floating-message" class="hidden" ng-controller="FloatingMessageController"></div>
 </body>
 
