--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <script src="js/pouchdb-3.3.1.min.js"></script>
     <script src="js/es6-promise-2.0.1.min.js"></script>
+    <script src="js/fetch.js"></script>
     <script src="js/triplesec.js"></script>
     <script src="js/mithril.min.js"></script>
     <script src="js/app.min.js"></script>
