--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
 
-    <title>Carbon Fox</title>
+    <title data-l10n-id="root-title">Carbon Fox</title>
 
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/buttons.css">
@@ -13,11 +13,14 @@
     <link rel="stylesheet" href="style/view.css">
     <link rel="stylesheet" href="style/font-awesome.min.css">
 
+    <link rel="resource prefetch" type="application/l10n" href="locales/locales.properties" />
+
     <script src="js/pouchdb-3.3.1.min.js"></script>
     <script src="js/es6-promise-2.0.1.min.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/triplesec.js"></script>
     <script src="js/mithril.min.js"></script>
+    <script src="js/l10n.js"></script>
     <script src="js/app.min.js"></script>
 </head>
 
