Implement arbitrary lock key entry, used especially for desktop view

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="style/view.css">
     <link rel="stylesheet" href="style/font-awesome.min.css">
 
+    <link rel="stylesheet" href="style/desktop.css">
+
     <link rel="resource prefetch" type="application/l10n" href="locales/locales.properties" />
 
     <script src="js/pouchdb-3.3.1.min.js"></script>
